++ 정상작동확인완료 ==

--- a/src/main/resources/templates/viewers/boards.html
+++ b/src/main/resources/templates/viewers/boards.html
@@ -21,8 +21,9 @@
 <main class="container">
   <div class="bg-light p-5 rounded">
     <h1>게시판</h1>
+    <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
     <p class="lead">boards::7jhp</p>
-    <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">button::8jhp&raquo;</a>
+    <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">button::8jhp</a>
   </div>
 </main>
 
