--- a/src/main/resources/templates/viewers/boards.html
+++ b/src/main/resources/templates/viewers/boards.html
@@ -1,35 +1,52 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-  <head>
+<head>
     <meta charset="utf-8">
     <meta lang="ko">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title  th:replace="viewers/common/fragments/common :: titlefragment('boards')">foo</title>
+    <title th:replace="viewers/common/fragments/common :: titlefragment('boards')">foo</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/navbar-static/">
-<link href="/assets/dist/css/bootstrap.min.css" th:href="@{/assets/dist/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="/assets/dist/css/bootstrap.min.css" th:href="@{/assets/dist/css/bootstrap.min.css}" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="navbar-top.css" rel="stylesheet">
-  </head>
-  <body>
+</head>
+<body>
 <nav th:replace="viewers/common/fragments/common :: navFragment('boards')">
-  foo_navFragment
+    foo_navFragment
 </nav>
 <main class="container">
-  <div class="bg-light p-5 rounded">
-    <h1>게시판</h1>
-    <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
-    <p class="lead">boards::7jhp</p>
-    <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">button::8jhp</a>
-  </div>
+    <div class="bg-light p-5 rounded">
+        <h1>게시판</h1>
+        <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
+        <table class="table table-success table-striped">
+            <thead>
+            <!--        <tr th:each="row : ${rows}">-->
+            <tr>
+                <th scope="col">번호</th>
+                <th scope="col">제목</th>
+                <th scope="col">내용</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="board : ${boards}">
+                <th scope="col" th:text="board.id">번호</th>
+                <th scope="col" th:text="board.title">제목</th>
+                <th scope="col" th:text="board.content">내용</th>
+            </tr>
+            </tbody>
+        </table>
+        <p class="lead">boards::7jhp</p>
+        <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">button::8jhp</a>
+    </div>
 </main>
 
 
-    <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
 
-      
-  </body>
+
+</body>
 </html>
