--- a/src/main/resources/templates/viewers/boards.html
+++ b/src/main/resources/templates/viewers/boards.html
@@ -21,7 +21,7 @@
 <main class="container">
     <div class="bg-light p-5 rounded">
         <h1>게시판</h1>
-        <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
+        <div>총 건수 : <span th:text="${#lists.size(board_records)}"></span></div>
         <table class="table table-success table-striped">
             <thead>
             <!--        <tr th:each="row : ${rows}">-->
@@ -32,15 +32,15 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="board : ${boards}">
-                <th scope="col" th:text="board.id">번호</th>
-                <th scope="col" th:text="board.title">제목</th>
-                <th scope="col" th:text="board.content">내용</th>
+            <tr th:each="board_record : ${board_records}">
+                <th scope="col" th:text="${board_record.id}">번호</th>
+                <th scope="col" th:text="${board_record.title}">제목</th>
+                <th scope="col" th:text="${board_record.content}">내용</th>
             </tr>
             </tbody>
         </table>
-        <p class="lead">boards::7jhp</p>
-        <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">button::8jhp</a>
+<!--        <p class="lead">boards::7jhp</p>-->
+<!--        <a class="btn btn-lg btn-primary" href="../components/navbar/" role="button">button::8jhp</a>-->
     </div>
 </main>
 
