--- a/src/main/resources/templates/viewers/home.html
+++ b/src/main/resources/templates/viewers/home.html
@@ -23,7 +23,10 @@
 <!--</nav>-->
 <main class="container">
   <div class="bg-light p-5 rounded">
-    home
+
+    th:fragment
+
+
   </div>
 </main> 
     <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
