--- a/src/main/resources/templates/code_segments.html
+++ b/src/main/resources/templates/code_segments.html
@@ -54,6 +54,13 @@ mkr_singlequat>
 '>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-6 ">
+            <input class="mkr_singleline1" value='
+<xmp class="mkr_xmp"></xmp>
+'>
+        </div>
+    </div>
     <div class="col-md-6 ">
         <input class="mkr_singleline" type="button" value='
 + jquery frame
@@ -774,8 +781,6 @@ exit
 	'>
         </div>
     </div>
-</div>
-</div>
 </div>
 <div class="area_divider"></div>
 <div class="container text_to_clipboard">
@@ -1752,6 +1757,7 @@ window.alert("8",target.attr("value"));
     </div>
     <div class="row">
         <input class="mkr_line_or_lines" type="button" value='
+TBD
 '>
     </div>
     <div class="row">
@@ -1786,5 +1792,4 @@ window.alert("8",target.attr("value"));
 <!--	아니 onclick event function을 한 script에 2번 넣으면 클릭 한번에 onclick function 2개가 순서대로 호출이 됩니다!-->
 <!--	아니 이 얼마나 반가운 일입니까? 앞으로 뭔가 시각적으로 여러번 깜박거리는 것을 구현할 때 for문 작성이 귀찮으면 이런 방법도 있습니다! ) -->
 </body>
-
 </html>
